# tree-sitter-tlaplus

./: .gitignore  .gitmodules  .npmignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  Test.tla  binding.gyp  check.sh  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  shell.nix  tree-sitter.json
.github/workflows/: canary.yml  ci.yml  release.yml
bindings/c/: tree-sitter-test.pc.in  tree-sitter-tlaplus.h  tree-sitter-tlaplus.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_test/: __init__.py
bindings/python/tree_sitter_tlaplus/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
docs/: index.html
docs/js/: tree-sitter-tlaplus.wasm
examples/python/: README.md  main.py  requirements.txt
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/typescript/: README.md  app.ts  package-lock.json  package.json
integrations/github/: highlights.scm
integrations/nvim/queries/tlaplus/: highlights.scm  injections.scm  locals.scm
nvim/ftdetect/: tlaplus.vim
nvim/queries/tlaplus/: folds.scm  highlights.scm  locals.scm
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  scanner.c  scanner.cc
test/: run-corpus.ps1  run-corpus.sh
test/consumers/node/: README.md  index.js  package.json
test/consumers/python/: README.md  main.py  requirements.txt  shell.nix
test/consumers/rust/: Cargo.toml  README.md  shell.nix
test/consumers/rust/src/: main.rs
test/consumers/typescript/: README.md  app.ts  package.json  shell.nix
test/corpus/: case-unicode.txt  case.txt  comment.tla  comment.txt  conjlist-unicode.txt  conjlist.txt  disjlist-unicode.txt  disjlist.txt  empty_set.txt  extends.txt  finite_set.txt  functions.txt  if_then_else.txt  infix_op.txt  jlist.txt  labels.txt  let_in.txt  modules.txt  number.txt  operators.txt  prefix_op.txt  primitive_boolean.txt  primitive_integer.txt  primitive_real.txt  primitive_string.txt  proofs.txt  range_set.txt  regression.txt  set_filter_precedence.txt  set_operator.txt  sets.txt  skip-failing-tests.patch  step_expressions.txt  string.txt  subexpressions.txt  unit.txt
test/corpus/exclude/sany/: case.txt  number.txt  operators.txt  (+3 more)
test/corpus/nonstandard/: modules.txt
test/corpus/pluscal/: assert.txt  assign.txt  await_when.txt  call_return.txt  comments.txt  definitions.txt  either.txt  goto.txt  if.txt  jlist.txt  labels.txt  macros.txt  print.txt  procedures.txt  processes.txt  skip.txt  while.txt  with.txt
test/corpus/unicode/: case-unicode.txt  functions-unicode.txt  numbers-unicode.txt  operators-unicode.txt
test/crash_regressions/: QEDErrorRecovery.tla  QEDErrorRecovery2.tla
test/example/: Test.tla
test/examples/: AssertFail.tla  Bad.tla  BugTrigger.tla  Elevator.tla  Highlight.tla
test/fuzzing/: build-for-fuzzing.sh  fuzzer.cc  gen-dict.py
test/release/node/: package.json
test/release/typescript/: package.json
test/sanitize/: build-sanitized.sh  run-corpus.sh  runner.cc
