[package]
name = "tree-sitter-tlaplus"
description = "A tree-sitter grammar for TLA+ and PlusCal"
version = "0.6.2"
authors = ["Andrew Helwer", "Vasiliy Morkovkin"]
license = "MIT"
readme = "README.md"
keywords = ["tlaplus", "pluscal", "tree-sitter", "grammar", "parser"]
categories = ["parser-implementations"]
repository = "https://github.com/tlaplus-community/tree-sitter-tlaplus"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "./LICENSE.md"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.3"

[build-dependencies]
cc = "1.0"

