[package]
name = "tree-sitter-tlaplus"
description = "A tree-sitter grammar for TLA⁺ and PlusCal"
version = "1.2.1"
authors = ["Andrew Helwer", "Vasiliy Morkovkin"]
license = "MIT"
readme = "README.md"
keywords = ["tla+", "tlaplus", "pluscal", "tree-sitter", "parser"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tlaplus-community/tree-sitter-tlaplus"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22.1"

[build-dependencies]
cc = "1.0.87"

