[project]
name = "tree-sitter-tlaplus"
description = "A tree-sitter grammar for TLAâº and PlusCal"
version = "TSTLA_RELEASE_VERSION"
authors = [
  { name = "Andrew Helwer" },
  { name = "Vasiliy Morkovkin" },
]
maintainers = [
  { name = "Andrew Helwer" },
]
keywords = ["incremental", "parsing", "tree-sitter", "tlaplus"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tlaplus-community/tree-sitter-tlaplus"
Issues = "https://github.com/tlaplus-community/tree-sitter-tlaplus/issues"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"

